<resources>
    <string name="home_card_1_text">Forget the hassles of cooking yourself</string>
    <string name="app_name">FoodRunner</string>
    <string name="mobile_number">Enter your mobile number</string>
    <string name="password">Enter your password</string>
    <string name="login">Login</string>
    <string name="enter_name">Enter your name</string>
    <string name="address">Delivery Address</string>
    <string name="choose_password">Password (Min. 4 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="registration">Register</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="faqs">FAQs</string>
    <string name="logout">Log out</string>
    <string name="cart">Cart</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_history">Order History</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="filter">Filter</string>
    <string name="restaurant_name">Restaurant</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="go_to_cart">Proceed to Cart</string>
    <string name="confirm_order">Place Order</string>
    <string name="favorites">Favorite Restaurants</string>
    <string name="channel_name">FoodRunner App</string>
    <string name="channel_description">This notification confirms that the order is placed</string>
    <string name="dummy_phone">+91-1234567890</string>
    <string name="empty_cart">Cart is empty, you haven\'t ordered anything!</string>
    <string name="no_favorites">Oops, You do not have any favorite restaurants</string>
    <string name="no_orders">Looks like, you haven\'t ordered anything!</string>
    <string name="register_yourself">Register Now!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="ques_7">Will my delivery agent bring the meal to my door or inside my office?</string>
    <string name="ans_7">Your delivery agent will bring your order right to your door. If it is easiest for you to walk outside - that\'s fine too. You can always meet the courier at the kerb.</string>
    <string name="ques_6">What are Food Hygiene Ratings?</string>
    <string name="ans_6">The Hygiene Ratings system will help consumers choose where to eat from by giving them information about the hygiene standards. It isn\'t easy to judge hygiene standards by appearances alone, so the rating gives you some idea of what is going on in the kitchen, or behind closed doors.</string>
    <string name="ques_1">What is FoodRunner?</string>
    <string name="faqs_heading">Well, considering satisfying the quest of your curious heads, we decided to answer some of the most frequently asked questions through this section.</string>
    <string name="ans_1">FoodRunner is our new food delivery platform which makes getting great food from your favourite local restaurants as easy as making a coffee.</string>
    <string name="ans_2">The Booking Fee on FoodRunner is a charge you pay on every delivery, which helps us to cover the operational costs.</string>
    <string name="ans_3">The extra fee ensures reliability. Sometimes there are more orders in a certain area than delivery partners who are able to deliver them. the fee ensures that even when FoodMania is busy in certain areas, you can still get the food you want - it is a value for money.</string>
    <string name="ans_4">Yes. Booking Fee is the standard fee that you pay for using our service. The additional fee will only appear if FoodRunner is busy in that particular area.</string>
    <string name="ans_5">For the most meals that you order through FoodRunner, you will be able to add special instructions to let know about any modifications you may need.</string>
    <string name="ques_3">Why am I paying a fee for busy areas?</string>
    <string name="ques_4">Is the fee for busy areas different from the Booking Fee?</string>
    <string name="ques_5">What if I have food allergies or want to change the order?</string>
    <string name="ques_2">What is the Booking Fee on FoodRunner?</string>
    <string name="hopefully_this_would_have_helped_you">Hopefully, this would have helped you!</string>
    <string name="email">Email Address</string>
    <string name="enter_your_registered_mobile_number_and_email_below">Enter your registered mobile number and email below:</string>
    <string name="next">Next</string>
    <string name="enter_otp">Enter the received OTP below</string>
    <string name="otp">OTP (4 characters)</string>
    <string name="new_password">New Password (Min. 4 characters)</string>
    <string name="submit">Submit</string>
    <string name="order_placed">Your order has been successfully placed!</string>
    <string name="order_history_static_text">Your previous orders are listed below :</string>
    <string name="dummy_date">20/12/2018</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_an_account">Create an Account</string>
    <string name="developed_by_vartika_yadava">Developed by Vartika Yadava</string>
    <string name="background_image">Background Image</string>
    <string name="our_delivery_partners_will_call_or_ring_your_doorbell_after_reaching_and_leave_the_order_at_your_door_gate">Our delivery partners will call (or ring your doorbell) after reaching and leave the order at your door/gate.</string>
    <string name="go_for_no_contact_delivery">Go for No-Contact Delivery</string>
    <string name="profile_image">profile image</string>
    <string name="safety_measures_we_follow_to_ensure_protection">Measures We Follow To Ensure Safety</string>
    <string name="safety_1">Ensuring that restaurant staff remain healthy. Any sick employee with even the mildest symptoms is given a day off.</string>
    <string name="safety_2">Restaurants conduct a complete cleaning of every possible touchpoint - chairs, tables, doorknobs, countertops and sinks - every 4 hours. All personnel involved in food preparation are provided 3-ply face masks. Hand Wash stations are maintained at pickup points allow delivery partners to practice safe hand hygiene. All orders are packed in an additional bag, so that the food container does not come in direct contact with anyone during the transit.</string>
    <string name="safety_3">The restaurants ensure that the delivery partners wear masks on a regular basis. Every delivery partner is required to click a selfie and post it on their app when they log-in to the system and start receiving orders.</string>
    <string name="safety_4">The delivery partner delivers food outside the customer\'s doorstep and then leaves. The customer gets a notification on the app saying that their food has been delivered. This is done for zero contact with the customer.</string>
    <string name="no_transaction_history_refund_status">No Transaction History/Refund Status..</string>
    <string name="review_your_order_and_address_details_to_avoid_cancellations">Review your order and address details to avoid cancellations</string>
    <string name="ordering_from">Ordering From :</string>
    <string name="restaurant_name_comes_here">Restaurant Name Comes Here</string>
    <string name="delivered">Delivered</string>
    <string name="anything_you_want_delivered_open_foodrunner_pickup_and_drop">- anything you want, delivered, open FoodRunner, pickup and drop.</string>
    <string name="top_picks_for_you">Top Picks For You</string>
    <string name="our_service_for_food_is_available_from_8_am_to_8_30_pm_so_fast_and_so_yummy">Our Service for Food is available from 8:00 AM to 8:30 PM. So Fast and So Yummy!</string>
    <string name="scroll_to_view_all_restaurants">Scroll to View all Restaurants</string>
    <string name="live_for_food">Live For Food</string>
    <string name="best_safety_standards">Best Safety Standards</string>
    <string name="what_our_restaurant_partners_are_doing_to_keep_your_food_safe">What we and our restaurant partners are doing to keep your food safe</string>
    <string name="know_more">Know More</string>
    <string name="my_account">My Account</string>
    <string name="view_past_orders">View past orders</string>
    <string name="transaction_history_amp_refund_status"><![CDATA[Transaction History & Refund Status]]></string>
    <string name="go_to_favorite_restaurants">Go to favorite restaurants</string>
    <string name="faqs_amp_links"><![CDATA[FAQs & Links]]></string>
    <string name="pull_up_a_chair_take_a_taste_come_join_us_life_is_so_endlessly_delicious">Pull up a chair. Take a taste. Come join us. Life is so endlessly delicious.......!!</string>
    <string name="good_food_is_always_cooking">Good food is always cooking</string>
    <string name="_300_person">300/person</string>
    <string name="_4_7">4.7</string>
    <string name="customizable">Customizable</string>
    <string name="reorder">Reorder</string>
    <array name="filters">
        <item>Cost(Low to High)</item>
        <item>Cost(High to Low)</item>
        <item>Rating</item>
    </array>

</resources>
