<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FAQFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faqs_heading"
                android:textSize="14sp"
                android:padding="15dp"
                android:justificationMode="inter_word"
                tools:targetApi="o" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorFaqs"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ques_1"
                android:padding="10dp"
                android:textColor="@color/colorFaqs"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/ans_1"
                android:textSize="16sp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:paddingStart="10dp"
                android:paddingBottom="15dp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ques_2"
                android:padding="10dp"
                android:textColor="@color/colorFaqs"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/ans_2"
                android:textSize="16sp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:paddingStart="10dp"
                android:paddingBottom="15dp"
                tools:ignore="RtlSymmetry"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ques_3"
                android:padding="10dp"
                android:textColor="@color/colorFaqs"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/ans_3"
                android:textSize="16sp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:paddingStart="10dp"
                android:paddingBottom="15dp"
                tools:ignore="RtlSymmetry"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ques_4"
                android:padding="10dp"
                android:textColor="@color/colorFaqs"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/ans_4"
                android:textSize="16sp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:paddingStart="10dp"
                android:paddingBottom="15dp"
                tools:ignore="RtlSymmetry"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ques_5"
                android:padding="10dp"
                android:textColor="@color/colorFaqs"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/ans_5"
                android:textSize="16sp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:paddingStart="10dp"
                android:paddingBottom="15dp"
                tools:ignore="RtlSymmetry"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ques_6"
                android:padding="10dp"
                android:textColor="@color/colorFaqs"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/ans_6"
                android:textSize="16sp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:paddingStart="10dp"
                android:paddingBottom="15dp"
                tools:ignore="RtlSymmetry"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ques_7"
                android:padding="10dp"
                android:textColor="@color/colorFaqs"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/ans_7"
                android:textSize="16sp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:paddingStart="10dp"
                android:paddingBottom="15dp"
                tools:ignore="RtlSymmetry"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorFaqs"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hopefully_this_would_have_helped_you"
                android:padding="10dp"
                android:textColor="@color/design_default_color_primary_dark"
                android:textStyle="bold"
                android:textSize="12sp"
                android:layout_marginBottom="100dp"
                android:drawableStart="@drawable/ic_action_star"/>

        </LinearLayout>
    </ScrollView>
</FrameLayout>