<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/app_icon" />

    <TextView
        android:id="@+id/txtAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/imageView"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="35sp"/>


    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtAppName"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="50dp"
        android:focusable="true"
        android:textAlignment="textStart"
        android:textColorHighlight="@color/colorPrimary"
        android:textColorHint="#979A9A"
        android:textSize="16sp"
        android:hint="@string/mobile_number"
        android:inputType="number"
        android:maxLength="10"
        android:maxLines="1" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMobileNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="50dp"
        android:focusable="true"
        android:textAlignment="textStart"
        android:textColorHighlight="@color/colorPrimary"
        android:textColorHint="#979A9A"
        android:textSize="16sp"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:maxLength="6"
        android:maxLines="1" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="50dp"
        android:layout_below="@+id/etPassword"
        android:background="#f06292"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:padding="8dp"
        android:textColor="#7FB3D5"
        android:text="@string/forgot_password"/>

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/don_t_have_an_account"
        android:layout_marginBottom="25dp"/>


        <TextView
            android:id="@+id/txtRegisterYourself"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/register_yourself"
            android:textAlignment="center"
            android:textColor="#7FB3D5"/>

</RelativeLayout>