<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rlForgotPass"
    tools:context=".activity.ForgotPasswordActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:id="@+id/rlContentMain">

        <ImageView
            android:id="@+id/imgAppLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="70dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/app_icon"/>

        <TextView
            android:id="@+id/txtEnterMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_registered_mobile_number_and_email_below"
            android:layout_below="@+id/imgAppLogo"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/etForgotMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtEnterMobile"
            android:background="@color/colorForm"
            android:inputType="number"
            android:textSize="16sp"
            android:padding="7dp"
            android:layout_margin="10dp"
            android:textAlignment="textStart"
            android:maxLength="10"
            android:maxLines="1"
            android:hint="@string/mobile_number"/>

        <EditText
            android:id="@+id/etForgotEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etForgotMobile"
            android:layout_centerHorizontal="true"
            android:background="@color/colorForm"
            android:textSize="16sp"
            android:padding="7dp"
            android:layout_margin="10dp"
            android:textAlignment="textStart"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>

        <Button
            android:id="@+id/btnForgotNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etForgotEmail"
            android:textSize="18sp"
            android:layout_margin="10dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:background="#f06292"
            android:text="@string/next"/>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
</RelativeLayout>