<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="4dp">

        <ImageView
            android:id="@+id/imgUserImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/profile3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:layout_marginStart="50dp"
            android:text="@string/my_account"
            android:textSize="17sp"
            android:textStyle="bold"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/imgUserImage"
            android:background="@android:color/darker_gray"
            android:padding="6dp"/>


        <LinearLayout
            android:id="@+id/llProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgUserImage"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:padding="4dp">


            <TextView
                android:id="@+id/txtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/name"
                android:background="@drawable/text_boundary_background"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/black"/>


            <TextView
                android:id="@+id/txtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/text_boundary_background"
                android:text="@string/dummy_phone"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_boundary_background"
                android:padding="10dp"
                android:text="@string/email"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/txtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/text_boundary_background"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/address"
                android:textAlignment="center"
                android:textColor="@android:color/black"/>
        </LinearLayout>

        <TextView
            android:id="@+id/txtProfile1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llProfile"
            android:layout_marginTop="20dp"
            android:text="@string/view_past_orders"
            android:textSize="15sp"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:background="#EEEEEE"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/txtProfile1"
            android:background="@android:color/darker_gray"
            android:padding="6dp"/>

        <TextView
            android:id="@+id/txtProfile2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtProfile1"
            android:layout_marginTop="20dp"
            android:text="@string/transaction_history_amp_refund_status"
            android:textSize="15sp"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:background="#EEEEEE"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/txtProfile2"
            android:background="@android:color/darker_gray"
            android:padding="6dp"/>

        <TextView
            android:id="@+id/txtProfile3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtProfile2"
            android:layout_marginTop="20dp"
            android:text="@string/go_to_favorite_restaurants"
            android:textSize="15sp"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:background="#EEEEEE"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/txtProfile3"
            android:background="@android:color/darker_gray"
            android:padding="6dp"/>

        <TextView
            android:id="@+id/txtProfile4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtProfile3"
            android:layout_marginTop="20dp"
            android:text="@string/faqs_amp_links"
            android:textSize="15sp"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:background="#EEEEEE"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/txtProfile4"
            android:background="@android:color/darker_gray"
            android:padding="6dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtProfile4"
            android:layout_marginTop="160dp"
            android:layout_centerHorizontal="true"
            android:text="App version 1.0"/>

    </RelativeLayout>

</FrameLayout>