<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
            android:id="@+id/llStaticOrderHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5"
            android:padding="10dp">

        <TextView
                android:id="@+id/txtResHistoryResName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.5"
                android:text="@string/restaurant_name"
                android:textSize="16sp"
                android:padding="5dp"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

        <TextView
                android:id="@+id/txtDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/dummy_date"
                android:padding="5dp"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black"
                android:fontFamily="@font/poppins"/>
    </LinearLayout>
   <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="@string/delivered"
       android:drawablePadding="5dp"
       android:drawableEnd="@drawable/ic_action_delivered"
       android:layout_marginStart="15dp"
       android:textColor="#64DD17"/>


    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerResHistoryItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/llStaticOrderHistory"
            android:padding="5dp">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/reorderButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recyclerResHistoryItems"
        android:layout_margin="15dp"
        android:text="@string/reorder"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_below="@+id/reorderButton"/>

</RelativeLayout>
